# test-automation-studio

test-automation-api/: .dockerignore  .env.development  .env.test  .eslintrc.json  .gitignore  .nycrc  .talismanrc  README.md  package-lock.json  package.json
test-automation-api/config/: default.json  test.json  todo.txt
test-automation-api/src/: app.ts  channels.ts  declarations.d.ts  index.ts  logger.ts  sequelize.ts
test-automation-api/test/: app.test.ts
test-automation-api/test/mock/: appBull.ts  (+7 more)
test-automation-rf/: README.md  pyproject.toml
test-automation-rf/code/: CommandConsumer.py  KafkaUtil.py  TopicProducer.py  app.py  init.sh  log.html  output.xml  playwright-log.txt  report.html  test.py
test-automation-rf/code/robots/: Untitled-1.json  init_fb_worker.robot  start.robot
test-automation-rf/code/robots/modules/components/: COMP_BrowserContext.resource  COMP_Button.resource  COMP_Checkbox.resource  COMP_MultiSelect.resource  COMP_Select.resource  COMP_Textbox.resource
test-automation-rf/code/robots/utils/: Common_util.py  UTIL_BrowserHelper.resource  UTIL_Collection.resource  UTIL_Common.resource  UTIL_String.resource  UTIL_Validation.resource
test-automation-rf/code/robots/utils/exceptions/: EX_Exception.resource
test-automation-studio-ui/: .env.development  .env.production  .env.test  package-lock.json  package.json
test-automation-studio-ui/ci/: Dockerfile  Jenkinsfile  deploy.sh
test-automation-studio-ui/public/: error.html  index.html  manifest.json
test-automation-studio-ui/src/: App.tsx  AppProvider.tsx  index.tsx  setupTests.js
(+187 files in other folders)
